[tool.poetry]
name = "typing-assistant"
version = "0.1.0"
description = ""
authors = ["Yeonwoo Jang <yjang385@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pynput = "^1.7.6"
pyperclip = "^1.8.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
